# cshell2

./: .README.md.swp  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
doc/: architecture.md  argcomplete-fallback.md  bash-completion-fallback.md  cobra-fallback.md  completion.md  context.md  decorators.md  enhancements.md  limitations.md  recipes.md  subcommands.md  terminal-resize.md  windows-setup.md
scripts/: install_launcher.py
src/cshell2/: __init__.py  __main__.py  _config.py  colors.py  commands.py  completion.py  completion_cache.py  context.py  history.py  lineedit.py  parsing.py  pipeline.py  process.py  prompt.py  shell.py  terminal.py  tui.py  variables.py
src/cshell2/decorators/: __init__.py  bg.py  quiet.py  retry.py  time.py  watch.py
src/cshell2/recipes/: __init__.py  aws.py  awsut.py  chmod.py  chown.py  cp.py  curl.py  df.py  docker.py  du.py  find.py  git.py  grep.py  hyperpod.py  kill.py  ls.py  lsof.py  make.py  mv.py  ps.py  rm.py  rsync.py  scp.py  ssh.py  tail.py  tar.py  terraform.py  top.py  unzip.py  watch.py  zip.py
tests/: conftest.py  test_alias_expansion.py  test_argcomplete_fallback.py  test_aws_recipe.py  test_cobra_completion.py  test_commands.py  test_completion.py  test_completion_cache.py  test_context.py  test_decorators.py  test_lineedit_history.py  test_make_recipe.py  test_parsing.py  test_piped_python_commands.py  test_pipeline.py  test_process.py  test_recipes.py  test_redirects.py  test_shell_continuation.py  test_subcommands.py  test_tar_recipe.py  test_variables.py
